<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParticleAnimationTest" >  

    <com.learn.playground.particleanim.ParticleAnimationHandlerView
        android:id="@+id/particleAnimHandler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <com.learn.playground.particleanim.ParticleAnimationView
        android:id="@+id/particleAnim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <Button
        android:id="@+id/playBoth"
        style="@style/ButtonMainYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/play_both" />

    <Button
        android:id="@+id/playHandler"
        style="@style/ButtonMainViolet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/play_handler" />

    <Button
        android:id="@+id/playNormal"
        style="@style/ButtonMainViolet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/play_normally" />

</LinearLayout>